@@ -1,3 +1,15 @@
+2000-12-28  Dirk Herrmann  <D.Herrmann@tu-bs.de>
+
+	This patch re-introduces the unused member "documentation" of
+	struct scm_subr_entry as requested by Mikael Djurfeldt.
+
+	* procs.h (scm_subr_entry):  Re-introduced member "documentation".
+
+	(SCM_SUBR_DOC):  Un-deprecated.
+
+	* procs.c (scm_make_subr_opt, scm_mark_subr_table):  Struct
+	scm_subr_entry has a member "documentation" again.
+
 2000-12-28  Michael Livshin  <mlivshin@bigfoot.com>
 
 	* guardians.c (mark_dependencies_in_tconc): new function.
